<resources>
    <string name="lahendama">LAHENDAMA</string>
    <string name="matemaatik">MATEMAATIK</string>
    <string name="info">INFO</string>
    <string name="info_desc">Matemaatik on Sinu isiklik matemaatika õpetaja, iga kell ja igas paigas Sinu jaoks olemas.</string>
    <string name="logo">Logo</string>
    <string name="liitmine">LIITMINE</string>
    <string name="testing">TextView</string>
    <string name="vasta">VASTA</string>
    <string name="_0">0</string>
    <string name="matemaatik_version">Matemaatik 1.2.2</string>
    <string name="tagasi">TAGASI</string>
    <string name="uuesti">UUESTI</string>
    <string name="skoor">SKOOR</string>
    <string name="lahutamine">LAHUTAMINE</string>
    <string name="korrutamine">KORRUTAMINE</string>
    <string name="jagamine">JAGAMINE</string>
    <string name="astendamine">ASTENDAMINE</string>
    <string name="juhuslik">JUHUSLIK</string>
    <string name="github_repo">https://github.com/35grain/matemaatik</string>
    <string name="no_input">Vastus puudub</string>
    <string name="correct_solution_was">Õige vastus oli:</string>
    <string name="warning">Hoiatus</string>
    <string name="exercise_exit_warning">Väljudes kaotad punktid. Kindel, et soovid väljuda?</string>
    <string name="yes">Jah</string>
    <string name="no">Ei</string>
    <string name="new_highscore">Uus parim tulemus!</string>
    <string name="highscore">Parim tulemus:</string>
    <string name="lesannete_arv_10">Ülesannete arv: 10</string>
    <string name="lihtne">Lihtne</string>
    <string name="harjutused">HARJUTUSED</string>
</resources>